Update .gitignore and remove large files

--- a/.gitignore
+++ b/.gitignore
@@ -179,3 +179,7 @@ annotations/person_keypoints_train2017.json
 keen_probe/keen_data/detailed_embeddings.json
 keen_probe/keen_data/generation_embeddings.h5
 keen_probe/keen_data/generation_embeddings.json
+
+# Additional large data files
+keen_probe/keen_data/generation_embeddings_V2.h5
+keen_probe/keen_data/pre_generation_embeddings.json
