--- a/.gitignore
+++ b/.gitignore
@@ -183,3 +183,6 @@ keen_probe/keen_data/generation_embeddings.json
 # Additional large data files
 keen_probe/keen_data/generation_embeddings_V2.h5
 keen_probe/keen_data/pre_generation_embeddings.json
+keen_probe/keen_data/generation_embeddings_V4.h5
+keen_probe/keen_data/pre_generation_embeddings_V41.json
+keen_probe/keen_data/pre_generation_embeddings_V4.json
