--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,101 @@
-torch==2.1.0
-transformers==4.37.2
-tokenizers==0.15.1
-pandas==2.1.4
-numpy==1.24.3
-tqdm==4.66.1
-pillow==10.1.0
-sentence-transformers==2.2.2
 accelerate==0.21.0
+aiofiles==23.2.1
+altair==5.5.0
+annotated-types==0.7.0
+anyio==4.9.0
+attrs==25.3.0
 bitsandbytes==0.41.1
-huggingface-hub==0.19.4 
+click==8.1.8
+contourpy==1.3.2
+cycler==0.12.1
+einops==0.6.1
+einops-exts==0.0.4
+fastapi==0.115.12
+ffmpy==0.5.0
+filelock==3.16.1
+fire==0.6.0
+fonttools==4.57.0
+fsspec==2024.10.0
+gradio==4.16.0
+gradio_client==0.8.1
+h11==0.14.0
+h5py==3.13.0
+httpcore==0.17.3
+httpx==0.24.0
+huggingface-hub==0.19.4
+importlib_resources==6.5.2
+Jinja2==3.1.4
+joblib==1.4.2
+jsonpointer==2.1
+jsonschema==4.23.0
+jsonschema-specifications==2025.4.1
+kiwisolver==1.4.8
+latex2mathml==3.77.0
+markdown-it-py==3.0.0
+markdown2==2.5.3
+matplotlib==3.10.1
+mdurl==0.1.2
+narwhals==1.37.1
+nltk==3.9.1
+nvidia-cublas-cu12==12.1.3.1
+nvidia-cuda-cupti-cu12==12.1.105
+nvidia-cuda-nvrtc-cu12==12.1.105
+nvidia-cuda-runtime-cu12==12.1.105
+nvidia-cudnn-cu12==8.9.2.26
+nvidia-cufft-cu12==11.0.2.54
+nvidia-curand-cu12==10.3.2.106
+nvidia-cusolver-cu12==11.4.5.107
+nvidia-cusparse-cu12==12.1.0.106
+nvidia-nccl-cu12==2.18.1
+nvidia-nvjitlink-cu12==12.6.85
+nvidia-nvtx-cu12==12.1.105
+orjson==3.10.18
+pandas==2.1.4
+peft==0.15.2
+Pillow==10.1.0
+protobuf==6.30.2
+psutil==7.0.0
+pydantic==2.11.4
+pydantic_core==2.33.2
+pydub==0.25.1
+Pygments==2.19.1
+pyparsing==3.2.3
+pysam==0.23.0
+python-dateutil==2.9.0.post0
+python-multipart==0.0.20
+pytz==2025.2
+referencing==0.36.2
+regex==2024.11.6
+rich==14.0.0
+rpds-py==0.24.0
+ruff==0.11.7
+safetensors==0.4.3
+scikit-learn==1.2.2
+scipy==1.15.2
+semantic-version==2.10.0
+sentence-transformers==2.2.2
+sentencepiece==0.1.99
+shellingham==1.5.4
+shortuuid==1.0.13
+six==1.17.0
+sniffio==1.3.1
+starlette==0.46.2
+svgwrite==1.4.3
+termcolor==2.5.0
+threadpoolctl==3.6.0
+timm==0.6.13
+tokenizers==0.15.1
+tomlkit==0.12.0
+torch==2.5.1
+torchaudio==2.5.1
+torchvision==0.16.0
+tqdm==4.66.1
+transformers==4.37.2
+triton==3.1.0
+typer==0.15.3
+typing-inspection==0.4.0
+typing_extensions==4.12.2
+tzdata==2025.2
+uvicorn==0.34.2
+wavedrom==2.0.3.post3
+websockets==11.0.3
