--- a/requirements.txt
+++ b/requirements.txt
@@ -22,7 +22,7 @@ h11==0.14.0
 h5py==3.13.0
 httpcore==0.17.3
 httpx==0.24.0
-huggingface-hub==0.19.4
+huggingface-hub>=0.19.4
 importlib_resources==6.5.2
 Jinja2==3.1.4
 joblib==1.4.2
@@ -38,9 +38,9 @@ mdurl==0.1.2
 narwhals==1.37.1
 nltk==3.9.1
 nvidia-cublas-cu12==12.1.3.1
-nvidia-cuda-cupti-cu12==12.1.105
-nvidia-cuda-nvrtc-cu12==12.1.105
-nvidia-cuda-runtime-cu12==12.1.105
+nvidia-cuda-cupti-cu12>=12.1.105
+nvidia-cuda-nvrtc-cu12>=12.1.105
+nvidia-cuda-runtime-cu12>=12.1.105
 nvidia-cudnn-cu12==8.9.2.26
 nvidia-cufft-cu12==11.0.2.54
 nvidia-curand-cu12==10.3.2.106
